--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
         </div>
         <div class="header__right-block">
-            <button class="btn btn_white">Connect with us</button>
+            <button data-modal class="btn btn_white">Connect with us</button>
         </div>
     </header>
     <div class="sidepanel">
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="offer__action">
-                <button class="btn btn_dark">Connect with us</button>
+                <button data-modal class="btn btn_dark">Connect with us</button>
             </div>
         </div>
         <div class="container">
@@ -290,7 +290,7 @@
         <div class="modal__dialog">
             <div class="modal__content">
                 <form action="#">
-                    <div class="modal__close">&times;</div>
+                    <div data-close class="modal__close">&times;</div>
                     <div class="modal__title">We will contact you as quickly as possible!</div>
                     <input required placeholder="Your name" name="name" type="text" class="modal__input">
                     <input required placeholder="Your phone number" name="phone" type="phone" class="modal__input">
