--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <!-- <link rel="stylesheet" href="css/styles.css">
+</head> -->
 <body>
     <header class="header">
         <div class="header__left-block">
