--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                     What's your gender
                 </div>
                 <div class="calculating__choose" id="gender">
-                    <div class="calculating__choose-item calculating__choose-item_active">Woman</div>
-                    <div class="calculating__choose-item">Men</div>
+                    <div id = "female" class="calculating__choose-item calculating__choose-item_active">Woman</div>
+                    <div id = "male" class="calculating__choose-item">Men</div>
                 </div>
 
                 <div class="calculating__subtitle">
@@ -154,17 +154,17 @@
                 <div class="calculating__choose calculating__choose_medium">
                     <input type="text" id="height" placeholder="Please enter height" class="calculating__choose-item">
                     <input type="text" id="weight" placeholder="Please enter weight"  class="calculating__choose-item">
-                    <input type="text" id="age" placeholder="Please enter ageт" class="calculating__choose-item">
+                    <input type="text" id="age" placeholder="Please enter age" class="calculating__choose-item">
                 </div>
 
                 <div class="calculating__subtitle">
                     Choose your physical activity
                 </div>
                 <div class="calculating__choose calculating__choose_big">
-                    <div id="low" class="calculating__choose-item">Low activity </div>
-                    <div id="small"  class="calculating__choose-item calculating__choose-item_active">Not very active</div>
-                    <div id="medium" class="calculating__choose-item">Moderate activity</div>
-                    <div id="high" class="calculating__choose-item">High activity</div>
+                    <div data-ratio ="1.2" id="low" class="calculating__choose-item">Low activity </div>
+                    <div data-ratio ="1.375" id="small"  class="calculating__choose-item calculating__choose-item_active">Not very active</div>
+                    <div data-ratio ="1.55" id="medium" class="calculating__choose-item">Moderate activity</div>
+                    <div data-ratio ="1.725" id="high" class="calculating__choose-item">High activity</div>
                 </div>
 
                 <div class="calculating__divider"></div>
